# lemuel-quant-core

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
deploy/: build_and_install.sh  install_deps.sh  server_assignments.md
deploy/systemd/: dart-crawler.service  data-warehouse.service  judge-engine.service  lqc-gateway.service  market-feed.service  news-pipeline.service  orderbook-matcher.service  shiny-dashboard.service  stock-feed.service  strategy-bot.service
docs/: architecture.md  site-integration.md
go/lqc-gateway/: README.md  go.mod  health.go  main.go  sse.go  subscribe.go
julia/quant-tools/: Project.toml  README.md
julia/quant-tools/src/: QuantTools.jl  backtest.jl  blackscholes.jl  loader.jl  portfolio.jl
modules/dart-crawler/: CMakeLists.txt  README.md
modules/dart-crawler/include/dart/: dart_client.hpp  disclosure_store.hpp
modules/dart-crawler/src/: dart_client.cpp  disclosure_store.cpp  main.cpp
modules/data-warehouse/: CMakeLists.txt  README.md
modules/data-warehouse/include/dwh/: parquet_writer.hpp  r2_uploader.hpp  redis_subscriber.hpp  rollup.hpp  timeseries.hpp
modules/data-warehouse/src/: main.cpp  parquet_writer.cpp  r2_uploader.cpp  redis_subscriber.cpp  rollup.cpp  timeseries_store.cpp
modules/judge-engine/: CMakeLists.txt  README.md
modules/judge-engine/grpc/: CMakeLists.txt  judge.proto  server.cpp
modules/judge-engine/include/judge/: runner.hpp  sandbox.hpp  sandbox_linux.hpp
modules/judge-engine/src/: main.cpp  runner.cpp  sandbox.cpp  sandbox_linux.cpp
modules/market-feed/: CMakeLists.txt  README.md
modules/market-feed/include/market/: binance_client.hpp  redis_publisher.hpp
modules/market-feed/src/: binance_client.cpp  main.cpp  redis_publisher.cpp
modules/news-pipeline/: CMakeLists.txt  README.md
modules/news-pipeline/include/news/: finbert.hpp  ner.hpp  news_score.hpp  rss_crawler.hpp  sentiment.hpp  types.hpp
modules/news-pipeline/src/: finbert.cpp  main.cpp  ner.cpp  news_score.cpp  rss_crawler.cpp  sentiment.cpp
modules/stock-feed/: CMakeLists.txt  README.md
modules/stock-feed/include/stock/: kis_client.hpp  krx_session.hpp
modules/stock-feed/src/: kis_client.cpp  krx_session.cpp  main.cpp
python/: README.md  requirements.txt
python/backtester/: loader.py  run.py  strategies.py
python/common/: __init__.py  r2.py  redis_io.py  telegram.py
python/crypto_price_tracker/: main.py
python/dex_feed/: main.py
python/gas_tracker/: main.py
python/strategy_bot/: run.py  signals.py
r/: README.md  cron.txt  install.R
r/common/: db.R  r2.R  redis.R
r/daily_report/: render.R  report.qmd
r/quant_research/: backtest.R
r/research_notebook/: template.qmd
r/risk_engine/: portfolio_risk.R
r/shiny_dashboard/: app.R
r/stat_models/: arima_forecast.R  cointegration.R  garch_volatility.R
rust/orderbook-matcher/: Cargo.toml  README.md
rust/orderbook-matcher/src/: book.rs  feed.rs  main.rs  publisher.rs
scripts/: build.sh  convert_finbert.py
shared/: CMakeLists.txt
shared/include/lqc/: feed_core.hpp  version.hpp
