[package]
name = "lqc-orderbook-matcher"
version = "0.1.0"
edition = "2021"
authors = ["lemuel-quant-core"]
description = "High-frequency orderbook + simple matching engine. Subscribes Binance WS, maintains BTreeMap-based book, optionally publishes top-of-book to Redis."

[dependencies]
anyhow = "1"
tokio = { version = "1.41", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
parking_lot = "0.12"
redis = { version = "0.27", features = ["tokio-comp"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
